[tool.poetry]
name = "llm finetuning"
version = "0.1.0"
description = ""
authors = ["boltuzamaki <divyanshuboltuzamaki23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
transformers = {version = "^4.0", extras = ["torch"]}
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
torch = "^2.4.1"
pandas = "^2.2.3"
pillow = "^10.4.0"
soundfile = "^0.12.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
datasets = "^3.0.1"
accelerate = "0.26.0"
evaluate = "^0.4.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
